# zyzSTL

./: CMakeLists.txt  README.md  main.cpp
example/: main.cpp
include/: algorithm.h  allocator.h  memlist.h  memlist_bf.h  memlist_ff.h  memlist_wf.h  memlistnode.h  mempool.h  vector.h
include/containers/: stack.h  trie.h  vector.h
include/mem-alloc/: mempool.h
lib/: libmem_manage.dylib  libzyzstl.dylib
src/: allocator.cpp  allocator.h  memlist.cpp  memlist.h  memlist_bf.cpp  memlist_bf.h  memlist_ff.cpp  memlist_ff.h  memlist_wf.cpp  memlist_wf.h  memlistnode.cpp  memlistnode.h  mempool.cpp  mempool.h  vector.cpp  vector.h
src/containers/: trie.cpp
src/mem-alloc/: memlist.cpp  memlist_bf.cpp  memlist_ff.cpp  memlist_wf.cpp  memlistnode.cpp  mempool.cpp
